--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "npm-funkyfunctions",
+  "name": "npm-thomas-funky-functions",
   "version": "1.0.0",
   "description": "These are some fun and funky functions to help you manipulate strings, arrays, and objects!",
   "main": "index.js",
